--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "socket.io-client": "^2.1.1",
-    "web3": "^1.0.0-beta.36"
+    "web3": "^1.0.0-beta.36",
+    "webmidi": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
