--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4",
+    "react-scroll-to-component": "^1.0.2",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "socket.io-client": "^2.1.1",
